LIST OF CHANGES
---------------

release 49.3
 - error if padding for spiked Phix index sequence is not long enough
 - kill unwanted jobs efficiently (one command for all ids and -b option)
 - call warehouse loaders with verbose option
 - call ml warehouse loader at the end of the analysis pipeline so that the product
   table is loaded by the time the run goes into QC thus allowing to query this
   warehouse using run id
 - simplified name generation for fastq files
 - use 'subset' option of the bam_flagstast autoqc result instead
   of the 'human_split' option
 - allow p4 to be used where no alignment is specified for target but human
     split (contains_nonconsented_human) is
 - new tests for various p4 analysis options in seq_alignment
     (20-archive_file_generation-seq_alignment.t)

release 49.2.1
 - to avoid deprecation warnings in Config::Any,
   ensure XS extensions are available for YAML and JSON

release 49.2
 - test updates only

release 49.1
 - remove 'move_to_outgoing' step from function list for qc runs

release 49.0
 - run the archival pipeline entirely in the directory where it was started, ie
   do not move the runnfolder to outgoing; this will be done by the staging
   monitor

release 48.9
 - run illumina analysis loader in a lowload lsf queue

release 48.8
 - pipeline daemon - when calling the pipeline, do not use paths that are local to the host

release 48.7
 - generate  fastqcheck files for empty fastq files explicitly without
   running fastqcheck executable, which is not available on gseq cluster
 - daemon to process a run if machine location is unknown

release 48.6
 - force gclp analysis along the p4 route

release 48.5
 - archive to a "gclp" iRODS if function_list looks like gclp variant
 - use low_load queue for upstream_tags qc (accesses tracking and qc DBs)

release 48.4
 - Make group to change analysis directories to optional
 - use LSB_BIND_CPU_LIST over LSB_MCPU_HOSTS to determine number of threads to use